Desenhando a Tela de Detalhe das Partidas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">simulator</string>
     <string name="randonmize_matches">Randonmize matches</string>
+    <string name="home_team_image">Home team image</string>
+    <string name="away_time_image">Away time image</string>
+    <string name="txt_versus" translatable="false">X</string>
 </resources>
