--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="app_name">simulador</string>
     <string name="randonmize_matches">Randomizar partidas</string>
+    <string name="home_team_image">Time de casa</string>
+    <string name="away_time_image">Time fora de casa</string>
 </resources>
